# mujoco_ROS

./: .clang-format  CMakeLists.txt  compile_commands.json
.cmake/api/v1/reply/: cache-v2-74be54cc8a760f7a23a3.json  codemodel-v2-cff05db3d760f8b72435.json  index-2024-08-25T14-04-46-0530.json  target-simulation-Debug-761d6f0e67ad2445346b.json
data/: data.csv  data_FL.csv
include/controller/: TrackingController.hpp
include/math/: MathUtilities.hpp  orientation_tools.hpp
include/robot/: Mclquad.hpp  MuJoCoInterface.hpp  RobotLeg.hpp
include/trajectory/: MotionTrajectory.hpp
include/utilities/: cTypes.h  cppTypes.hpp  data_logging.hpp
model/mcl_quad/: quadrupedMCL.xml
src/: main.cc
src/controller/: TrackingController.cpp
src/robot/: MuJoCoInterface.cpp  RobotLeg.cpp
src/trajectory/: MotionTrajectory.cpp
src/utilities/: data_logging.cpp
